Team Avengers/src/objects/Project_Map__c.object
<CustomObject>
    <fields>
        <fullName>Current_project__c</fullName>
        <formula>Project_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current project</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Practitioner_Name__c</fullName>
        <label>Practitioner Name</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Practitioner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Practitioner</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Project Maps</relationshipLabel>
        <relationshipName>Project_Maps1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project_Name__c</fullName>
        <label>Project Name</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Status__c</fullName>
        <label>Project Status</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Project Maps</relationshipLabel>
        <relationshipName>Project_Maps1</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Project Map</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Display</fullName>
        <columns>NAME</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Project_Name__c</field>
            <operation>notEqual</operation>
            <value>NULL</value>
        </filters>
        <label>Display</label>
    </listViews>
    <nameField>
        <displayFormat>MAP-{0000}</displayFormat>
        <label>Project Map Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Project Maps</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>